--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
 </head>
 <body>
     <main class="card">
+        <figure class="foto">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDq8zv9f44MfiNlAXjebtS8EfQrCMPKvL9AA&s" alt="">
-
+        </figure>
         <label>Olá, eu sou Ruan!</label>
         <div class="redes sociais">
-            icones
+            <!-- linkedin -->
+            <a href="#">
+                <img src="imagens/imagens/logo-linkedin.png" alt="">
+            </a>
+            <!-- instagram -->
+            <a href="#">
+                <img src="imagens/imagens/logo-instagram.png" alt="">
+            </a>
+            <!-- github -->
+            <a href="#">
+                <img src="imagens/imagens/logo-github.png" alt="">
+            </a>
+
         </div>
     </main>
 </body>
