--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDq8zv9f44MfiNlAXjebtS8EfQrCMPKvL9AA&s" alt="">
         </figure>
         <label>Olá, eu sou Ruan!</label>
-        <div class="redes sociais">
+        <div class="redes-sociais">
             <!-- linkedin -->
             <a href="#">
                 <img src="imagens/imagens/logo-linkedin.png" alt="">
